# rules_oapi_codegen

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.md  defs.bzl  go.mod  go.sum  release_prep.sh
.github/workflows/: buildifier.yaml  ci.yaml  release.yaml  release_prep.sh  tag.yaml
e2e/smoke/: BUILD.bazel  MODULE.bazel  api.yaml
internal/: BUILD.bazel  oapi_codegen.bzl
tools/: BUILD.bazel  oapi_codegen_wrapper.sh
