module(
    name = "rules_oapi_codegen",
    version = "1.0",
)

bazel_dep(name = "rules_go", version = "0.58.3")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

bazel_dep(name = "gazelle", version = "0.46.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_oapi_codegen_oapi_codegen_v2")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
